tests/specs/ecosystem/tma/sdk/0_3_0.test
tma/sdk/0.3.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  declare private isVisible: any;
                  ~~~~~~~~~
    at file://<tmpdir>/src/back-button/BackButton.ts:17:19

TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  get isVisible(): boolean {
      ~~~~~~~~~
    at file://<tmpdir>/src/back-button/BackButton.ts:21:7

TS2300 [ERROR]: Duplicate identifier 'isConfirmationNeeded'.
  declare private isConfirmationNeeded: any;
                  ~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/closing-behavior/ClosingBehavior.ts:14:19

TS2300 [ERROR]: Duplicate identifier 'isConfirmationNeeded'.
  get isConfirmationNeeded(): boolean {
      ~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/closing-behavior/ClosingBehavior.ts:19:7

TS2304 [ERROR]: Cannot find name 'defaultPostEvent'.
  constructor(version: Version, createRequestId: CreateRequestIdFunc, postEvent = defaultPostEvent) {}
                                                                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/cloud-storage/CloudStorage.ts:7:83

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  declare private isOpened: any;
                  ~~~~~~~~
    at file://<tmpdir>/src/invoice/Invoice.ts:15:19

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  get isOpened(): boolean {
      ~~~~~~~~
    at file://<tmpdir>/src/invoice/Invoice.ts:19:7

TS2300 [ERROR]: Duplicate identifier 'isEnabled'.
  declare private isEnabled: any;
                  ~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:15:19

TS2300 [ERROR]: Duplicate identifier 'isEnabled'.
  get isEnabled(): boolean {
      ~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:19:7

TS2300 [ERROR]: Duplicate identifier 'isLoaderVisible'.
  declare private isLoaderVisible: any;
                  ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:22:19

TS2300 [ERROR]: Duplicate identifier 'isLoaderVisible'.
  get isLoaderVisible(): boolean {
      ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:26:7

TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  declare private isVisible: any;
                  ~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:29:19

TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  get isVisible(): boolean {
      ~~~~~~~~~
    at file://<tmpdir>/src/main-button/MainButton.ts:33:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Navigator<Promise<void>>'.
  back = (): Promise<void> => ({}) as never;
  ~~~~
    at file://<tmpdir>/src/navigation/HashNavigator/HashNavigator.ts:41:3

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  declare private isOpened: any;
                  ~~~~~~~~
    at file://<tmpdir>/src/popup/Popup.ts:16:19

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  get isOpened(): boolean {
      ~~~~~~~~
    at file://<tmpdir>/src/popup/Popup.ts:20:7

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  declare private isOpened: any;
                  ~~~~~~~~
    at file://<tmpdir>/src/qr-scanner/QRScanner.ts:19:19

TS2300 [ERROR]: Duplicate identifier 'isOpened'.
  get isOpened(): boolean {
      ~~~~~~~~
    at file://<tmpdir>/src/qr-scanner/QRScanner.ts:23:7

TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  declare private isVisible: any;
                  ~~~~~~~~~
    at file://<tmpdir>/src/settings-button/SettingsButton.ts:12:19

TS2300 [ERROR]: Duplicate identifier 'isVisible'.
  get isVisible(): boolean {
      ~~~~~~~~~
    at file://<tmpdir>/src/settings-button/SettingsButton.ts:16:7

Found 20 errors.

error: Type checking failed.

